[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "creational_design_patterns_harry"
version = "0.0.1"
authors = [
  { name="Harry", email="s.shahbazi.89@gmail.com" },
]
description = "OOP Creational Design Patterns"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
